added var in indexOf and new lastIndexOf method

--- a/indexOf.html
+++ b/indexOf.html
@@ -18,8 +18,8 @@
 //indexOf() compares searchElement to elements of the Array using strict equality (the same method used by the === or triple-equals operator).
 
 function indexOf(array, searchElement, fromIndex) {
-  let startIndex = 0;
-  const arrayLength = array.length;
+  var startIndex = 0;
+  var arrayLength = array.length;
 
   if(fromIndex) {
     startIndex = fromIndex
