--- a/find.html
+++ b/find.html
@@ -1,4 +1,11 @@
-<script src="../simpletest.js"></script>
+<!-- function filterRec (array, element) {
+    for (var i = 0; i < array.length; i++){
+      return array[i] === element;
+    }
+  
+  } -->
+  
+  <script src="../simpletest.js"></script>
 <script>
 // Prototype Implementation:
   // function find(array, callback, optionalThis) {
@@ -11,127 +18,123 @@
 
 
 //Function signature:
-  //.find(callback(element[, index[, array]])[, thisArg])
+  //find(callback(element[, index[, array]])[, thisArg])
 
 //Callback parameters:
   //element
   //index
   //array
-  
 
-//Return Value: 
-  //Returns the value of the first element.
-  // The value of the first element in the array that satisfies the provided testing function. Otherwise, undefined is returned.
 
-function find (originalArray, callback, optionalThis) {
-  var arrayLength = originalArray.length;
-  var findCallback = callback;
 
-  if (optionalThis) {
-    findCallback = callback.bind(optionalThis);
-  }
-  for (var i = 0; i < arrayLength; i++) {
-    if (findCallback(originalArray[i], i, originalArray) === true) {
-      return originalArray[i];
+function find(array, callback, optionalThis) {
+    const arrayLength = array.length;
+    let findCallback = callback;
+
+    if (optionalThis) {
+        findCallback = callback.bind(optionalThis);
     }
-  }   
+    for (var i = 0; i < arrayLength; i++ ){
+        if(findCallback(array[i], i, array)){
+            return array[i];
+        }  
+    }
 }
+
+
 
 tests({
 
 'It should run array.length times': function() {
-  var numberOfTimesCallbackHasRun = 0;
-  find([1], function() {
-  numberOfTimesCallbackHasRun++;
-  });
-  eq(numberOfTimesCallbackHasRun, 1);
+let numberOfTimesCallbackHasRun = 0;
+find([1,2,3], function () {
+    numberOfTimesCallbackHasRun++;  
+});
+eq(numberOfTimesCallbackHasRun, 3);
 },
 'It should pass in the ith element as the first argument to the callback': function () {
-  find([1], function(number) {
-    eq(number, 1);
-  }); 
+find([1], function (element) {
+eq(element, 1);
+});
 },
 'It should pass in the ith position as the second argument to the callback': function () {
-  find([1], function(number, index) {
-    eq(index, 0);
-  });
-  
+find([1], function (element, index) {
+eq(index, 0);
+}); 
 },
 'It should pass in the original Array as the third argument to the callback': function () {
-  var testArray = [1,2,3];
-  find(testArray, function(element, index, originalArray) {
-    eq(originalArray, testArray);
-  });
+let originalArray = [1,2];
+find(originalArray, function (element, index, array) {
+eq(array, originalArray);
+});
 },
 'It should accept an optional this object': function () {
-  find([1], function () {
-  eq(this.doughnut, 'strawberry jelly.');
-  }, {doughnut: 'strawberry jelly.'});
+find([1], function () {
+eq(this.doughnut, 'strawberry jelly');
+}, {doughnut: 'strawberry jelly'});
 },
 'It should be undefined if no optional this object': function () {
-  find([1], function () {
-  eq(this.doughnut, undefined);
-  },);
+find([1], function () {
+eq(this.doughnut, undefined);
+});
 },
-
 'If truthy value, it should return value of the element': function () {
-  var findResult = find([1,2,3], function (element) {
-        return element > 2
-  });
-  eq(findResult, 3);
+const findResult = find([1,2], function (element) {
+    return element > 1;
+});
+eq(findResult, 2);
 },
 
 'If no truthy value, it should return undefined': function () {
-  var findResult = find([1,2,3], function (element) {
-        return element > 3
-  });
-  eq(findResult, undefined);
+const findResult = find([1,2], function (element) {
+return element > 3;
+});
+eq(findResult, undefined);
 },
 
 'It should run callback at every index, including holes': function () {
-  var numberOfTimesCallbackHasRun = 0;
-  find([1,,3], function (element) {
-    numberOfTimesCallbackHasRun++;
-  });
-  eq(numberOfTimesCallbackHasRun, 3);
+let numberOfTimesCallbackHasRun = 0;
+find([1, , 2, , 3], function () {
+  numberOfTimesCallbackHasRun++  
+})
+eq(numberOfTimesCallbackHasRun, 5);
 },
 
 'It should not mutate the array': function () {
-  var originalArray = [1];
-  find(originalArray, function (element) {
-  });
-  eq(originalArray.length, 1);
-  eq(originalArray[0], 1);
+let originalArray = [1];
+find(originalArray, function(element){
+});
+eq(originalArray[0], 1)
+eq(originalArray.length, 1);
 },
 
 'It should not allow callback to visit any elements added to the array after the call to find begins': function () {
-  var originalArray = [1];
-  numberOfTimesCallbackHasRun = 0;
-
-  find(originalArray, function () {
-    originalArray.push('add me');
-    numberOfTimesCallbackHasRun++;
-  });
-  eq(numberOfTimesCallbackHasRun, 1);
+let originalArray =[1];
+let numberOfTimesCallbackHasRun = 0;
+find(originalArray, function(element){
+    originalArray.push('chocolate');
+    numberOfTimesCallbackHasRun++
+});
+eq(numberOfTimesCallbackHasRun, 1);
 },
 
-'It should pass in current element value to callback': function () {
-  var findResult = find([1,2], function (element,index,originalArray) {
-    originalArray[1] = 3;
-    return element > 2
-  });
-  eq(findResult, 3);
+'It should pass in current element value to callback': function () { 
+let originalArray = [1,2];
+const findResult = find(originalArray, function(element){
+    originalArray[1] = 5
+    return element > 3
+});
+eq(findResult, 5)
 },
 
 'It should still run callback on deleted elements': function () {
-  var originalArray = [1,2];
-  var numberOfTimesCallbackHasRun = 0;
-
-  find(originalArray, function () {
-    originalArray.splice(0, 1);
+let originalArray = [1,2,3];
+let numberOfTimesCallbackHasRun = 0;
+let findResult = find(originalArray, function(element){
+    originalArray.splice(1,2)
     numberOfTimesCallbackHasRun++
-  });
-  eq(numberOfTimesCallbackHasRun, 2);
+});
+eq(numberOfTimesCallbackHasRun, 3);
 }
 })
 
