--- a/every.html
+++ b/every.html
@@ -10,7 +10,7 @@
   // }
 
 //Function signature:
-  //.every(callback(element[, index[, array]])[, thisArg])
+  //every(callback(element[, index[, array]])[, thisArg])
 
 //Callback parameters:
   //element
@@ -26,121 +26,130 @@
   //The every method executes the provided callback function once for each element present in the array until it finds the one where callback returns a falsy value. If such an element is found, the every method immediately returns false. Otherwise, if callback returns a truthy value for all elements, every returns true
 
 
-function every(originalArray, callback, optionalThis) {
-    var arrayLength  = originalArray.length;
-    var everyCallback = callback;
-    var everyResult = true;
+function every (array, callback, optionalThis) {
+  const length = array.length;
+  let everyCallback = callback;
+  let resultOftheCallback;
 
 
-    if (optionalThis) {
-      everyCallback = callback.bind(optionalThis);
-    }
-    for(var i = 0; i < arrayLength; i++) {
-      if (i in originalArray) {
-      var resultCallback = everyCallback(originalArray[i], i, originalArray)
-      if (resultCallback === false) {
-      everyResult = false;
-      return everyResult;
-      }
-    }
+  if (optionalThis) {
+    everyCallback = callback.bind(optionalThis);
   }
-    return everyResult;
 
+  for (let i = 0; i < length; i++) {
+      if (i in array){
+      resultOftheCallback = everyCallback(array[i], i, array);
+      }    
+  }
+  if (resultOftheCallback || length === 0) {
+    return true;
+  }
+  if (!resultOftheCallback) {
+    return false; 
+
+  } 
 };
+
+
+
+
+
 
 tests({
 
 'It should run array.length times': function() {
-  var numberOfTimesCallbackHasRun = 0;
-  every([1], function() {
-  numberOfTimesCallbackHasRun++;
+  let numberOfTimesCallbackHasRun = 0;
+  every([1,2,3], function () {
+    numberOfTimesCallbackHasRun++;
   });
-  eq(numberOfTimesCallbackHasRun, 1);
+  eq(numberOfTimesCallbackHasRun, 3);
+
 },
 'It should pass in the ith element as the first argument to the callback': function () {
-  every([1], function(number) {
-    eq(number, 1);
-  }); 
+  every([1], function (element) {
+    eq(element, 1);
+  });
 },
 'It should pass in the ith position as the second argument to the callback': function () {
-  every([1], function(number, index) {
+  every([1], function (element, index) {
     eq(index, 0);
   });
   
 },
-'It should pass in the original Array as the third argument to the callback': function () {
-  var testArray = [1,2,3];
-  every(testArray, function(number, index, originalArray) {
-    eq(originalArray, testArray);
+  'It should pass in the original Array as the third argument to the callback': function () {
+  const originalArray = [1,2,3];
+  every(originalArray, function(element, index, array) {
+    eq(array, originalArray);
   });
 },
 'It should accept an optional this object': function () {
   every([1], function () {
-  eq(this.doughnut, 'strawberry jelly.');
-  }, {doughnut: 'strawberry jelly.'});
+    eq(this.superhero, 'watman');
+  }, {superhero: 'watman'});
 },
 'If any of the element returns a falsy value, it should return false.': function() {
-var numberCallback = 0;
-var everyResult = every([1, 2, 3], function(number) {
-numberCallback++;
-return number < 2;
-})
-eq(numberCallback, 2);
-eq(everyResult, false);
-},
-'If all elements returns truthy value, it should return true.': function() {
-var everyResult = every([1, 2], function(number) {
-return number < 3;
-})
-eq(everyResult, true);
-},
-'It should return true if the array is empty.': function() {
-var everyResult = every([], function() {})
-eq(everyResult, true);
-},
-'It shouldn not run callback on holes.': function() {
-var numberOfTimesCallbackHasRun = 0;
-var arrayWithHoles = [, 1, , 2, ];
-every(arrayWithHoles, function() {
-numberOfTimesCallbackHasRun++;
-});
-eq(numberOfTimesCallbackHasRun, 2);
-},
-'It should not mutate the array': function() {
-var originalArray = [1];
-every(originalArray, function() {})
-eq(originalArray[0], 1);
-eq(originalArray.length, 1);
-},
-'It should not allow callback to visit any elements added to the array after the call to find begins': function () {
-  var originalArray = [1];
-  numberOfTimesCallbackHasRun = 0;
-
-  var everyResult = every(originalArray, function () {
-    originalArray.push('add me');
-    numberOfTimesCallbackHasRun++;
-  });
-  eq(numberOfTimesCallbackHasRun, 1);
-  eq(everyResult, true);
-},
-'It should pass in current element value to callback': function () {
-  var everyResult = every([1,2], function (element,index,originalArray) {
-    originalArray[1] = 3;
-    return element > 2
+  everyResult = every([4], function (element) {
+    return element < 4;
+  numberOfTimesCallbackHasRun++
   });
   eq(everyResult, false);
 },
-'It should not run callback on deleted elements': function () {
-  var originalArray = [1,2];
-  var numberOfTimesCallbackHasRun = 0;
-
-  var everyResult = every(originalArray, function () {
-    originalArray.splice(0, 1);
+'If all elements returns truthy value, it should return true.': function() {
+  everyResult = every([2], function (element) {
+    return element > 1;
+  });
+  eq(everyResult, true);
+},
+'It should return true if the array is empty.': function(element) {
+  everyResult = every([], function () {
+    return element > 16;
+  });
+  eq(everyResult, true);
+},
+'It shouldn not run callback on holes.': function() {
+  let numberOfTimesCallbackHasRun = 0;
+  every([, 2, , 4], function () {
     numberOfTimesCallbackHasRun++
   });
+  eq(numberOfTimesCallbackHasRun, 2);
+},
+'It should not mutate the array': function() {
+  let originalArray = [1,2,'pizza'];
+  every(originalArray, function(element) {
+    element > 1
+  })
+  eq(originalArray.length, 3);
+  eq(originalArray[0], 1);
+  eq(originalArray[1], 2);
+  eq(originalArray[2], 'pizza');
+},
+'It should not allow callback to visit any elements added to the array after the call to find begins': function () {
+  numberOfTimesCallbackHasRun = 0;
+  let originalArray = [1];
+  every(originalArray, function(){
+    originalArray.push('buzzzzy')
+    numberOfTimesCallbackHasRun++ 
+  });
   eq(numberOfTimesCallbackHasRun, 1);
-  eq(everyResult, true);
+},
+'It should pass in current element value to callback': function () {
+  let originalArray = [1,2];
+  everyResult = every(originalArray, function(element){
+    originalArray[1] = 3;
+    return element > 4;
+  })
+  eq(everyResult, false)
+},
+'It should not run callback on deleted elements': function () {
+  numberOfTimesCallbackHasRun = 0;
+  let originalArray = [1,'pepperoni',3];
+  everyResult = every(originalArray, function(){
+    originalArray.splice(2,1);
+    numberOfTimesCallbackHasRun++
+  })
+  eq(numberOfTimesCallbackHasRun, 2);
 }
 })
 
 </script>
+
