--- a/reduce.html
+++ b/reduce.html
@@ -16,17 +16,17 @@
 //Callback parameters:
   // accumulator (previously called previousValue)
   // currentValue
-  // index (previously called currentIndex)
-  // array
+  // index (previously called currentIndex) is optional
+  // array is optional
 
 //Return Value: 
   //Returns a single value.
 
 function reduce(array, callback, initialValue) {
-  var startingIndex = 0;
-  var resultSoFar = initialValue;
-  var length = array.length;
-  var arrayIndexes = (Object.keys(array));
+  let startingIndex = 0;
+  let resultSoFar = initialValue;
+  const length = array.length;
+  const arrayIndexes = (Object.keys(array));
 
   //No Initial Value
   if (arguments.length < 3) {
@@ -36,8 +36,8 @@ function reduce(array, callback, initialValue) {
 
     //If array has one element, just return it.
     if (arrayIndexes.length === 1) {
-      var onlyIndex = arrayIndexes[0];
-      var onlyElement = array[onlyIndex];
+     const onlyIndex = arrayIndexes[0];
+      const onlyElement = array[onlyIndex];
       return onlyElement;
     }
 
@@ -55,7 +55,7 @@ function reduce(array, callback, initialValue) {
     }
   }
 
-  for (var i = startingIndex; i < length; i++) {
+  for (let i = startingIndex; i < length; i++) {
     if (i in array) {
       resultSoFar = callback(resultSoFar, array[i], i, array);
     }
@@ -68,14 +68,14 @@ function reduce(array, callback, initialValue) {
 tests({
 
 'If initialValue, callback should run array.length times': function () {
-  var numberOfTimesCallbackHasRun = 0;
+  let numberOfTimesCallbackHasRun = 0;
   reduce([1], function () {
     numberOfTimesCallbackHasRun++;
   }, 0);
   eq(numberOfTimesCallbackHasRun, 1);
 },
 'If no initialValue, callback should run array.length - 1 times': function () {
-  var numberOfTimesCallbackHasRun = 0;
+  let numberOfTimesCallbackHasRun = 0;
   reduce([1], function () {
     numberOfTimesCallbackHasRun++;
   },);
@@ -116,17 +116,17 @@ tests({
 
 
 'If initialValue, and array is empty, return initialValue without calling callback.': function () {
-  var numberOfTimesCallbackHasRun = 0;
-  var initialValue = 0;
-  var reduceResult = reduce([,,], function () {
+  let numberOfTimesCallbackHasRun = 0;
+  let initialValue = 0;
+  let reduceResult = reduce([,,], function () {
     numberOfTimesCallbackHasRun++; 
   }, initialValue)
   eq(reduceResult, initialValue);
   eq(numberOfTimesCallbackHasRun, 0);
 },
 'If no initialValue, and array has one element, it should return that element without calling callback.': function () {
-  var numberOfTimesCallbackHasRun = 0;
-  var reduceResult = reduce([1], function() {
+  let numberOfTimesCallbackHasRun = 0;
+  const reduceResult = reduce([1], function() {
     numberOfTimesCallbackHasRun++;
   });
   eq(reduceResult, 1);
@@ -135,25 +135,25 @@ tests({
 
 
 'It should actually reduce.': function () {
-  var sum = reduce([1,2,3], function (a,b) {
+  const sum = reduce([1,2,3], function (a,b) {
     return a + b;
   }, 0)
   eq(sum, 6);
 },
 'If initialValue it should exclude holes.': function () {
-  var sum = reduce([, 1, , 2, 3, ,], function (a,b) {
+  const sum = reduce([, 1, , 2, 3, ,], function (a,b) {
     return a + b;
   }, 0)
   eq(sum, 6);
 },
 'If no initialValue it should exclude holes too.': function () {
-  var sum = reduce([, 1, , 2, 3, ,], function (a,b) {
+  const sum = reduce([, 1, , 2, 3, ,], function (a,b) {
     return a + b;
   })
   eq(sum, 6);
 },
 'If array is empty, and no initialValue, throw TypeError.': function () {
-  var isTypeError = false;
+  let isTypeError = false;
   try {
     reduce([], function () {});
   } catch (e) {
@@ -162,7 +162,7 @@ tests({
   eq(isTypeError, true)
 },
 'It should pass array as the fourth argument to callback.': function () {
-  var testArray = [1,2];
+  const testArray = [1,2];
   reduce(testArray, function(accumulator, currentValue, currentIndex, arrayToReduce) {
     eq(arrayToReduce, testArray);
   });
